--- a/projects/words_count/templates/result.html
+++ b/projects/words_count/templates/result.html
@@ -12,7 +12,6 @@
         }
         .panel {
             width: 750px;
-            height: 210px;
             border: 1px solid #ccc;
             padding: 20px;
             display: flex;
@@ -37,7 +36,7 @@
 <body>
     <div class="panel">
         <h2>Word Count Result</h2>
-        <p>Total Count: {{ total_alphabets }}</p>
+        <p>Total Count: {{ total_count }}</p>
         <button onclick="location.href='/'">Exit</button>
     </div>
 </body>
