--- a/projects/newline/templates/index.html
+++ b/projects/newline/templates/index.html
@@ -12,7 +12,7 @@
         }
         .panel {
             width: 750px;
-            height: 210px;
+            height: auto;
             border: 1px solid #ccc;
             padding: 20px;
             display: flex;
